_sass/dark-minimal/_base.sass
/**
 * _sass/_base.sass
 *
 * Base styles for blog.
 *
 * Will Badart <wbadart@live.com>
 * created: JAN 2018
 */

@import 'colors'
@import 'utils'


html
  background-color: $site-background

body
  color:       $body-fg
  font-family: 'Share Tech Mono', monospace

header
  background-color: white
  color:            $site-background
  margin:           4em auto 3em auto
  padding:          1em
  p, a, a:active, a:visited, a:link
    color: $site-background
  h1
    word-break: break-all

footer
  margin-bottom: 1em
  font-size:  0.7em
  i
    margin-left: 0 !important
  @media(min-width:640px)
    &:nth-child(2)
      text-align: right

h1, h2, h3, h4, h5, h6
  color: $header-fg

.post-title
  border-bottom: 2px solid white
  margin-bottom: 2em
  p
    margin-bottom: 0.1em
  ul
    list-style:    none
    margin-bottom: 0
  li
    color:   $body-minor
    display: inline-block

.post-listing-info
  @extend .post-title
  border-bottom: none
  margin-bottom: 0
  h1, h2, h3
    margin-bottom: 0.2em
  p
    font-size: 1em
  div>div
    display: inline-block

p, li.bigger
  font-size:   1.2em

li p
  display: inline

small
  color:     $body-minor !important
  p &
    font-size: 1em

a, a:active, a:visited, a:link
  color:               $body-fg
  border-bottom:       3px solid $site-accent
  text-decoration:     none
  transition-property: background-color, color
  transition-duration: 0.2s
  transition-timing-function: ease-out

  &:hover
    background-color: $site-accent
    color:            white
  &[target=_blank] i
    margin-left: 0.4em
    font-size:   0.7em

pre
  border-left: 0.3em solid $site-accent

img
  background-color: white
  border:           4px solid $site-accent
  display:          block
  margin:           auto

code
  color: $site-background

.pagination
  @extend .text-center

iframe
  display: block
  margin: auto auto 1em auto

